--- a/src/Board.css
+++ b/src/Board.css
@@ -3,6 +3,7 @@
   border-radius: 10px;
   /* box-shadow: 10px 10px 0 red; */
   box-shadow: 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  max-width: 90%;
 }
 
 table tr:first-child td:first-child {
@@ -24,6 +25,7 @@ table tr:last-child td:last-child {
 }
 
 .Board-title {
+  max-width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
