minor styling fix

--- a/src/Board.css
+++ b/src/Board.css
@@ -33,7 +33,7 @@ table tr:last-child td:last-child {
 .neon-orange {
   font-family: neon;
   color: #fb4264;
-  font-size: 80px;
+  font-size: 4em;
   text-shadow: 0 0 3vw #f40a35;
   animation: neon-orange 1s ease infinite;
   -moz-animation: neon-orange 1s ease infinite;
@@ -43,7 +43,7 @@ table tr:last-child td:last-child {
 .neon-blue {
   font-family: neon;
   color: #426dfb;
-  font-size: 80px;
+  font-size: 4em;
   text-shadow: 0 0 3vw #2356ff;
   animation: neon-blue 2s linear infinite;
   -moz-animation: neon-blue 2s linear infinite;
