--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,9 +1,10 @@
 .Cell {
-  height: 100px;
-  width: 100px;
+  height: 5em;
+  width: 5em;
   border-radius: 1px;
   background-color: #263238;
   transition: background-color 0.7s ease;
+  max-width: 18vw;
 }
 
 .Cell-lit {
