--- a/src/Board.css
+++ b/src/Board.css
@@ -1,9 +1,8 @@
 .Board {
-  margin: 0 auto;
+  margin: auto;
   border-radius: 10px;
   /* box-shadow: 10px 10px 0 red; */
   box-shadow: 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
-  max-width: 90%;
 }
 
 table tr:first-child td:first-child {
@@ -28,6 +27,7 @@ table tr:last-child td:last-child {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: -15em;
 }
 
 .neon-orange {
@@ -53,7 +53,7 @@ table tr:last-child td:last-child {
 
 .winner .neon-blue,
 .winner .neon-orange {
-  font-size: 200px;
+  font-size: 6em;
 }
 
 @keyframes neon-orange {
